fix horizontal scroll

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,7 +41,7 @@ h4 {
 }
 
 .navbar {
-    margin: 0 -8px;
+    margin: 0;
     padding: 20px 80px 10px;
     border-bottom: 1px solid #DEDEDE;
 }
